# trec-product-search-recs

./: .gitmodules  LICENSE  main.py  pyproject.toml
recommend-task-2025/: .gitignore  Makefile  RunAnalysis.ipynb  collect-ucsd-asins.py  esci-training.py  filter-corpus.sql  import-meta.sql  instructions.md  prep-corpus-assess.py  prep-queries.sql  product-distance.sql  rec-queries.tsv  screen-products.ipynb  ucsd-2023
search-task-2025/: README.md  bm25_baseline.py  instructions.md  llm_reformulation_bm25_baseline.py
