[project]
name = "trec-product"
version = "0.1.0"
description = "Tools for the TREC product search & recommendation track."
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
  "docopt-ng ~=0.9",
  "duckdb ~=1.3",
  "humanize>=4.12.3",
  "ipykernel>=6.30.1",
  "jupysql>=0.11.1",
  "matplotlib>=3.10.5",
  "notebook>=7.4.5",
  "pandas>=2.2.3",
  "pyarrow>=21.0.0",
  "pydantic>=2.11.9",
  "seaborn>=0.13.2",
  "toml>=0.10.2",
  "visidata>=3.2",
  "xopen>=2.0.2",
  "zstandard>=0.24.0",
]
